fix: scrollbar & styles

--- a/src/App.css
+++ b/src/App.css
@@ -820,14 +820,12 @@ h1 {
 }
 
 ::-webkit-scrollbar-thumb {
-  background: var(--elektron-medium-gray);
-  border: 2px solid transparent;
-  background-clip: padding-box;
-  border-radius: 6px;
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 3px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: var(--elektron-light-gray);
+  background: rgba(255, 255, 255, 0.35);
 }
 
 /* Project Detail Page */
